修复GoggleTooltipDedupUtil中对ArrayList的访问方式